tests/nightly/misc/compile_fail/true_cfg_attr_checks_preconditions.stderr
error[E0308]: mismatched types
  --> $DIR/true_cfg_attr_checks_preconditions.rs:10:9
   |
10 |         assure("fuu", reason = "is fuu")
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `"foo"`, found `"fuu"`
   |
   = note: expected struct `pre::CustomCondition<"foo">`
              found struct `pre::CustomCondition<"fuu">`
